Adding detail page

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<script src="js/html5.js"></script>
 		<script src="js/css3-mediaqueries.js"></script>
 	<![endif]-->
-	
+	<link href='./images/favicon.ico' rel='icon' type='image/x-icon'/>
 	<script src="js/jquery.min.js"></script>
 	<script src="js/responsiveslides.js"></script>
 	<script>
@@ -113,7 +113,7 @@
 
 	      <tr>
 	         <td><img src="https://i.picsum.photos/id/1005/100/100.jpg" alt="" /></td>
-	         <td>Jane Doe</td>
+	         <td><a href="single.html">Jane Doe</a></td>
 	         <td>jane.doe@foo.com</td>
 	         <td>01 800 2000</td>
 	         <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </td>
@@ -121,7 +121,7 @@
 
 	      <tr>
 	         <td><img src="https://i.picsum.photos/id/1027/100/100.jpg" alt="" /></td>
-	         <td>John Doe</td>
+	         <td><a href="single.html">Jane Doe</a></td>
 	         <td>john.doe@foo.com</td>
 	         <td>01 800 2000</td>
 	         <td>Blanditiis, aliquid numquam iure voluptatibus ut maiores explicabo ducimus neque, nesciunt rerum perferendis, inventore.</td>
@@ -129,7 +129,7 @@
 
 	      <tr>
 	         <td><img src="https://i.picsum.photos/id/64/100/100.jpg" alt="" /></td>
-	         <td>Jane Smith</td>
+	         <td><a href="single.html">Jane Doe</a></td>
 	         <td>jane.smith@foo.com</td>
 	         <td>01 800 2000</td>
 	         <td> Culpa praesentium unde pariatur fugit eos recusandae voluptas.</td>
@@ -137,7 +137,7 @@
 	      
 	      <tr>
 	         <td><img src="https://i.picsum.photos/id/1025/100/100.jpg" alt="" /></td>
-	         <td>John Smith</td>
+	         <td><a href="single.html">Jane Doe</a></td>
 	         <td>john.smith@foo.com</td>
 	         <td>01 800 2000</td>
 	         <td>Aut voluptatum accusantium, eveniet, sapiente quaerat adipisci consequatur maxime temporibus quas, dolorem impedit.</td>
